# geniescript

./: .gitignore  DEVELOPER.md  README.md  pyproject.toml
.github/workflows/: test.yml
examples/example1/: args_example.genie  args_example.genie.py  example.genie  example.genie.py  system.md
geniescript/: cli.py  run.py
scripts/: bump_version.py
tests/: test_cli.py  test_completion.py  test_instructions.py  test_run.py  test_util.py
